--- a/external-service/deployment.yaml
+++ b/external-service/deployment.yaml
@@ -1,53 +1,28 @@
 apiVersion: apps/v1beta1
-kind: Deployment # it is a deployment
+kind: Deployment
 metadata:
-  name: core-dns-sample-service # name of the Deployment
+  name: core-dns-sample-service
   labels:
     # any Pods with matching labels are included in this Deployment
     app: external-svc-poc
     tier: core-dns-sample-service
 spec:
   # ReplicaSet specification
-  replicas: 3 # we are making 3 Pods
+  replicas: 3
   selector:
     matchLabels:
       # ReplicaSet labels will match Pods with the following labels
       tier: core-dns-sample-service
   template:
-    # Pod template
     metadata:
       labels:
         # Pod's labels
         app: external-svc-poc
         tier: core-dns-sample-service
     spec:
-      # Pod specification
       containers:
-        # the container(s) in this Pod
         - name: communication-container
           image: core-dns-sample:latest
           imagePullPolicy: Never
-          # the readiness probe details
-          # readinessProbe:
-          #   httpGet: # make an HTTP request
-          #     port: 8080 # port to use
-          #     path: /readiness # endpoint to hit
-          #     scheme: HTTP # or HTTPS
-          #   initialDelaySeconds: 3 # how long to wait before checking
-          #   periodSeconds: 3 # how long to wait between checks
-          #   successThreshold: 1 # how many successes to hit before accepting
-          #   failureThreshold: 1 # how many failures to accept before failing
-          #   timeoutSeconds: 1 # how long to wait for a response
-          # # the livenessProbe probe details
-          # livenessProbe:
-          #   httpGet: # make an HTTP request
-          #     port: 8080 # port to use
-          #     path: /healthcheck # endpoint to hit
-          #     scheme: HTTP # or HTTPS
-          #   initialDelaySeconds: 3 # how long to wait before checking
-          #   periodSeconds: 3 # how long to wait between checks
-          #   successThreshold: 1 # how many successes to hit before accepting
-          #   failureThreshold: 1 # how many failures to accept before failing
-          #   timeoutSeconds: 1 # how long to wait for a response
           ports:
             - containerPort: 80
