--- a/external-service/load-balancer.yaml
+++ b/external-service/load-balancer.yaml
@@ -1,16 +1,14 @@
 apiVersion: v1
-kind: Service # a way for the outside world to reach the Pods
+kind: Service
 metadata:
   # any Pods with matching labels are included in this Service
   name: core-dns-sample-service
 spec:
-  # Service ports
   ports:
     - name: http
       port: 80
       targetPort: 80
       protocol: TCP
-  # It includes a LoadBalancer between Pods
   type: LoadBalancer
   selector:
     app: external-svc-poc
