--- a/external-service/load-balancer.yaml
+++ b/external-service/load-balancer.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   # any Pods with matching labels are included in this Service
-  name: core-dns-sample-service
+  name: my-internal-service
 spec:
   ports:
     - name: http
@@ -11,4 +11,4 @@ spec:
       protocol: TCP
   type: LoadBalancer
   selector:
-    app: external-svc-poc
+    app: external-service-poc
