Making the app more robust to demonstrate exposing an internal service using a hostname, and having that internal service proxy the content from an ExternalName service in the cluster.

--- a/external-service/deployment.yaml
+++ b/external-service/deployment.yaml
@@ -21,9 +21,9 @@ spec:
         tier: my-internal-service
     spec:
       containers:
-        - name: communication-container
+        - name: internal-service-container
           image: internal-service-sample:latest
           # Force local registry lookup
           imagePullPolicy: Never
           ports:
-            - containerPort: 80
+            - containerPort: 3000
