--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -5,5 +5,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/nodejitsu/browsenpm.org"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "request": "^2.88.0"
   }
 }
