--- a/external-service/deployment.yaml
+++ b/external-service/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     tier: my-internal-service
 spec:
   # ReplicaSet specification
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       # ReplicaSet labels will match Pods with the following labels
@@ -21,9 +21,9 @@ spec:
         tier: my-internal-service
     spec:
       containers:
-        - name: communication-container
+        - name: internal-service-container
           image: internal-service-sample:latest
           # Force local registry lookup
           imagePullPolicy: Never
           ports:
-            - containerPort: 80
+            - containerPort: 3000
