gmann-affinipay: Here's an example of how to use multiple kinds of secret files and configuration values, and expose all of them to the container as environment variables. Uses ConfigMaps and Secrets native to Kubernetes.

--- a/external-service/deployment.yaml
+++ b/external-service/deployment.yaml
@@ -26,4 +26,16 @@ spec:
           # Force local registry lookup
           imagePullPolicy: Never
           ports:
-            - containerPort: 3000
+          - containerPort: 3000
+          #command: [ "/bin/sh", "-c", "env" ]
+          envFrom:
+          - secretRef:
+              name: mysecret
+          - secretRef:
+              name: db-user-pass
+          - configMapRef:
+              name: app-env-file.properties
+          - configMapRef:
+              name: app.properties
+          - configMapRef:
+              name: ui.properties
