gmann-affinipay: Replacing some config variables to make them more generic.

--- a/configs/app.properties
+++ b/configs/app.properties
@@ -1,4 +1,4 @@
 company=affinipay
 brands=3
-lawpay.enabled=true
-lawpay.enabled.mascot=unicorn
+website.enabled=true
+website.enabled.mascot=ranger
