Gmann affinipay/configs and secrets (#1)
* gmann-affinipay: Here's an example of how to use multiple kinds of secret files and configuration values, and expose all of them to the container as environment variables. Uses ConfigMaps and Secrets native to Kubernetes.

* gmann-affinipay: Documentation improvements. MD syntax, plus better explanation of what this P/R actually does.

* gmann-affinipay: Demonstrating a volume that mounts and stores configured values in each container

* gmann-affinipay: Updating a config property to make it more universal.

* gmann-affinipay: Some better explanation of secrets in the ReadMe.

* gmann-affinipay: Replacing some config variables to make them more generic.

--- a/external-service/deployment.yaml
+++ b/external-service/deployment.yaml
@@ -25,5 +25,25 @@ spec:
           image: internal-service-sample:latest
           # Force local registry lookup
           imagePullPolicy: Never
+          volumeMounts:
+          - name: app-config-volume
+            mountPath: /etc/config
           ports:
-            - containerPort: 3000
+          - containerPort: 3000
+          envFrom:
+          - secretRef:
+              name: mysecret
+          - secretRef:
+              name: db-user-pass
+          - configMapRef:
+              name: app-env-file.properties
+          - configMapRef:
+              name: app.properties
+          - configMapRef:
+              name: ui.properties
+      volumes:
+      - name: app-config-volume
+        configMap:
+          # Provide the name of the ConfigMap containing the files you want
+          # to add to the container
+          name: app.properties
